# tinker

./: .gitignore  Cargo.toml  Makefile  README.md
tinker-tui/: Cargo.toml
tlib/: Cargo.toml
tlib/src/: client.rs
tui/: Cargo.toml
tui/src/: app.rs  main.rs
tui/src/ui/: splash.rs
